tests/snapshots/integration__integration_tests__config_show__config_show_full_command_not_found.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - show
    - "--full"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[36mUSER CONFIG[39m  ~/.config/worktrunk/config.toml
[107m [0m  worktree-path = [32m"../{{ main_worktree }}.{{ branch }}"
[107m [0m  
[107m [0m  [1m[36m[commit-generation]
[107m [0m  command = [32m"nonexistent-llm-command-12345"
[107m [0m  args = [[32m"-m"[0m, [32m"test-model"[0m]

[36mPROJECT CONFIG[39m  [REPO]/.config/wt.toml
💡 [2mNot found[22m

[36mSHELL INTEGRATION[39m
⚪ [2mSkipped bash; ~/.bashrc not found[22m
⚪ [2mSkipped zsh; ~/.zshrc not found[22m
⚪ [2mSkipped fish; ~/.config/fish/conf.d not found[22m

[36mBINARIES[39m
🟡 [33m[1mgh[22m installed but not authenticated; run [1mgh auth login[22m[39m
🟡 [33m[1mglab[22m installed but not authenticated; run [1mglab auth login[22m[39m

⚪ Running diagnostic checks...

🔄 [36mTesting commit generation with [1mnonexistent-llm-command-12345 -m test-model[22m[39m
❌ [31mCommit generation failed[39m
[107m [0m  ❌ [31mCommit generation command failed[39m
[107m [0m  [107m [0m  Failed to spawn LLM command
[107m [0m  
[107m [0m  ⚪ Ran command:
[107m [0m  [107m [0m  nonexistent-llm-command-12345 -m test-model

💡 [2mCheck that the command is installed and API keys are configured[22m
